--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <main>
     <div id="page1" >
       <video loop muted autoplay src="./images/Timeline 1222234.mov"></video>
+      <div></div>
     </div>
     <!-- page2 -->
      <div id="page2">
