--- a/index.html
+++ b/index.html
@@ -59,6 +59,40 @@
     <div id="page1" >
       <video loop muted autoplay src="./images/Timeline 12222.mp4"></video>
 
+      <!-- here is the line -->
+        <div id="moving-text">
+          <div class="con">
+            <h1>EXPERIENCES</h1>
+            <div id="gola"></div>
+
+            <h1>CONTENT</h1>
+            <div id="gola"></div>
+
+            <h1>ENVIRONMENTS</h1>
+            <div id="gola"></div>
+          </div>
+          <div class="con">
+            <h1>EXPERIENCES</h1>
+            <div id="gola"></div>
+
+            <h1>CONTENT</h1>
+            <div id="gola"></div>
+
+            <h1>ENVIRONMENTS</h1>
+            <div id="gola"></div>
+          </div>
+          <div class="con">
+            <h1>EXPERIENCES</h1>
+            <div id="gola"></div>
+
+            <h1>CONTENT</h1>
+            <div id="gola"></div>
+
+            <h1>ENVIRONMENTS</h1>
+            <div id="gola"></div>
+          </div>
+        </div>
+
        <!-- here is header -->
         <div id="page3">
          <div id="head">
