--- a/index.html
+++ b/index.html
@@ -1,65 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>TourSphere</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="shortcut icon" href="https://upload.wikimedia.org/wikipedia/en/thumb/4/41/Flag_of_India.svg/1200px-Flag_of_India.svg.png" type="image/x-icon">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <link
-  rel="stylesheet"
-  href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
-/>
- <!-- Demo styles -->
-  <style>
-    html,
-    body {
-      position: relative;
-      height: 100%;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>TourSphere</title>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="shortcut icon"
+      href="https://upload.wikimedia.org/wikipedia/en/thumb/4/41/Flag_of_India.svg/1200px-Flag_of_India.svg.png"
+      type="image/x-icon"
+    />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <!-- Demo styles -->
+    <style>
+      html,
+      body {
+        position: relative;
+        height: 100%;
+      }
 
-    body {
-      background: #eee;
-      font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-      font-size: 14px;
-      color: #000;
-      margin: 0;
-      padding: 0;
-    }
+      body {
+        background: #eee;
+        font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+        font-size: 14px;
+        color: #000;
+        margin: 0;
+        padding: 0;
+      }
 
-    .swiper {
-      width: 95%;
-      height: 95%;
-      border-radius: 20px;
-    }
+      .swiper {
+        width: 95%;
+        height: 95%;
+        border-radius: 20px;
+      }
 
-    .swiper-slide {
-      text-align: center;
-      font-size: 18px;
-      background: #fff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
+      .swiper-slide {
+        text-align: center;
+        font-size: 18px;
+        background: #fff;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
 
-    .swiper-slide img {
-      display: block;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
-  </style>
+      .swiper-slide img {
+        display: block;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    </style>
+  </head>
+  <body>
+    <main>
+      <div id="page1">
+        <video loop muted autoplay src="./images/Timeline 12222.mp4"></video>
 
-
-
-</head>
-<body>
-  <main>
-    <div id="page1" >
-      <video loop muted autoplay src="./images/Timeline 12222.mp4"></video>
-
-      <!-- here is the line -->
+        <!-- here is the line -->
         <div id="moving-text">
           <div class="con">
             <h1>EXPERIENCES</h1>
@@ -93,95 +94,84 @@
           </div>
         </div>
 
-       <!-- here is header -->
+        <!-- here is header -->
         <div id="page3">
-         <div id="head">
-            <img src="./images/KHAJRAHO_LE_auto_x2-Photoroom.png" alt="">
+          <div id="head">
+            <img src="./images/KHAJRAHO_LE_auto_x2-Photoroom.png" alt="" />
             <div class="intro">
-                <h1>Welcome to Dubai</h1>
-                <p>Beautiful beaches, record-breaking attractions and experiences like no other – Dubai is the place to be in 2024. It's no wonder we are the first city to be named Tripadvisor's #1 Top Destination in the World for three years running. Let's explore!</p>
-
+              <h1>Welcome to Dubai</h1>
+              <p>
+                Beautiful beaches, record-breaking attractions and experiences
+                like no other – Dubai is the place to be in 2024. It's no wonder
+                we are the first city to be named Tripadvisor's #1 Top
+                Destination in the World for three years running. Let's explore!
+              </p>
             </div>
             <div class="btn">
-                <div class="button">hi</div>
+              <div class="button">hi</div>
             </div>
-
-
-         </div>
-
-    </div>
-    <!-- page2 -->
-     <div id="page2">
-
-       <!-- Swiper -->
-  <div class="swiper mySwiper">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide">
-        <img src="./images/PACHMARI-Photoroom.png" alt="">
-        <div class="text">
-            <h1>Fort</h1>
-            <p>Lorem, ipsum dolor.</p>
+          </div>
         </div>
-      </div>
-      <div class="swiper-slide">
-        <img src="./images/Omkareshwar.jpg" alt="">
-        <div class="text">
-            <h1>Fort</h1>
-            <p>Lorem, ipsum dolor.</p>
+        <!-- page2 -->
+        <div id="page2">
+          <!-- Swiper -->
+          <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <img src="./images/PACHMARI-Photoroom.png" alt="" />
+                <div class="text">
+                  <h1>Fort</h1>
+                  <p>Lorem, ipsum dolor.</p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <img src="./images/Omkareshwar.jpg" alt="" />
+                <div class="text">
+                  <h1>Fort</h1>
+                  <p>Lorem, ipsum dolor.</p>
+                </div>
+              </div>
+              <div class="swiper-slide">
+                <img src="./images/GWALIAR.png" alt="" />
+                <div class="text">
+                  <h1>Fort</h1>
+                  <p>Lorem, ipsum dolor.</p>
+                </div>
+              </div>
+            </div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-pagination"></div>
+          </div>
         </div>
-      </div>
-      <div class="swiper-slide">
-        <img src="./images/GWALIAR.png" alt="">
-        <div class="text">
-            <h1>Fort</h1>
-            <p>Lorem, ipsum dolor.</p>
-        </div>
-      </div>
-
-    </div>
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
-    <div class="swiper-pagination"></div>
-  </div>
-
-
-     </div>
-     <!-- page3 -->
-
-
-
+        <!-- page3 -->
       </div>
       <!-- page4 -->
-       <div id="page4">
+      <div id="page4"></div>
+    </main>
 
-       </div>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <!-- Initialize Swiper -->
+    <script>
+      var swiper = new Swiper('.mySwiper', {
+        cssMode: true,
+        navigation: {
+          nextEl: '.swiper-button-next',
+          prevEl: '.swiper-button-prev',
+        },
+        pagination: {
+          el: '.swiper-pagination',
+        },
+        mousewheel: true,
+        keyboard: true,
+        autoplay: {
+          delay: 2500, // 2.5 seconds between slides
+          disableOnInteraction: false, // Keeps autoplay running even after user interaction
+        },
+      })
+    </script>
 
-  </main>
-
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <!-- Initialize Swiper -->
-  <script>
-    var swiper = new Swiper(".mySwiper", {
-      cssMode: true,
-      navigation: {
-        nextEl: ".swiper-button-next",
-        prevEl: ".swiper-button-prev",
-      },
-      pagination: {
-        el: ".swiper-pagination",
-      },
-      mousewheel: true,
-      keyboard: true,
-      autoplay: {
-        delay: 2500, // 2.5 seconds between slides
-        disableOnInteraction: false, // Keeps autoplay running even after user interaction
-      },
-    });
-  </script>
-
- <script src="https://cdn.tailwindcss.com"></script>
-  <script src="script.js">
-
-  </script>
-</body>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
