--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <!-- here is header -->
         <div id="page3">
           <div id="head">
-            <img src="./images/KHAJRAHO_LE_auto_x2-Photoroom.png" alt="" />
+            <img class="head" src="./images/KHAJRAHO_LE_auto_x2-Photoroom.png" alt="" />
             <div class="intro">
               <h1>Welcome to Dubai</h1>
               <p>
@@ -106,10 +106,11 @@
                 we are the first city to be named Tripadvisor's #1 Top
                 Destination in the World for three years running. Let's explore!
               </p>
-            </div>
-            <div class="btn">
+              <div class="btn">
               <div class="button">hi</div>
             </div>
+            </div>
+
           </div>
         </div>
         <!-- page2 -->
