--- a/index.html
+++ b/index.html
@@ -99,15 +99,18 @@
           <div id="head">
             <img class="head" src="./images/KHAJRAHO_LE_auto_x2-Photoroom.png" alt="" />
             <div class="intro">
-              <h1>Welcome to Dubai</h1>
+                <div class="texts">
+                 <h1>Welcome to INDIA</h1>
               <p>
                 Beautiful beaches, record-breaking attractions and experiences
                 like no other – Dubai is the place to be in 2024. It's no wonder
                 we are the first city to be named Tripadvisor's #1 Top
                 Destination in the World for three years running. Let's explore!
               </p>
+                </div>
+
               <div class="btn">
-              <div class="button">hi</div>
+              <div class="button">Explore</div>
             </div>
             </div>
 
